force-app/main/default/objects/EYI_Payment_Schedule__c/EYI_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Payment Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>