force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_Date__c</fullName>
    <description>Actual Completion Date</description>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>