force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Amount_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>EYI_Amount_to_be_paid__c</fullName>
    <label>Amount to be paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>