force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Due_Amount__c</fullName>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>