force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_GST__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST__c</fullName>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>