force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_GST_Formula__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Formula__c</fullName>
    <formula>if( ISNULL(Payment_Plan__r.Project__r.EYI_GST_Pay_Schedule_Charge__c),0 ,( EYI_Payable_Amount__c * Payment_Plan__r.Project__r.EYI_GST_Pay_Schedule_Charge__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST_Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>