force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Invoice_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Invoice_Percentage__c</fullName>
    <label>Percentage of value to be invoiced</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>