force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_IsAutomationBypassed__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsAutomationBypassed__c</fullName>
    <formula>EYI_AutomationBypassDatetime__c &gt; NOW() - 0.00005787037</formula>
    <label>IsAutomationBypassed</label>
    <type>Checkbox</type>
</CustomField>