force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Milestone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone</label>
    <type>Checkbox</type>
</CustomField>