force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Milestone_Completed__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Completed</label>
    <type>Checkbox</type>
</CustomField>