force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Milestone_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone_Number__c</fullName>
    <label>Milestone Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>