force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>Time Bound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>