force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>EYI_Net_Payable__c</fullName>
    <formula>EYI_Due_Amount__c  +  EYI_GST__c - EYI_TDS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>