force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_NPV_Cal__c.field-meta.xml
<CustomField>
    <fullName>EYI_NPV_Cal__c</fullName>
    <label>NPV Cal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>