force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payable_Amount__c</fullName>
    <formula>IF(ISBLANK(EYI_Actual_Date__c),
Payment_Plan__r.EYI_Quote__r.EYI_Agreement_Value__c * EYI_Invoice_Percentage__c/100,
EYI_Amount_to_be_paid__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>