force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_SAP_Activity_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Activity_Number__c</fullName>
    <label>Activity No.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>