force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_SAP_Milestone_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Milestone_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Milestone Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>