force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_SAP_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Plant_Code__c</fullName>
    <label>SAP Plant Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>