force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_SAP_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Sales_Org__c</fullName>
    <label>SAP Sales Org</label>
    <length>8</length>
    <type>Text</type>
</CustomField>