force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_TDS__c.field-meta.xml
<CustomField>
    <fullName>EYI_TDS__c</fullName>
    <formula>IF( Payment_Plan__r.EYI_Quote__r.EYI_Agreement_Value__c &gt; 5000000 , CEILING( EYI_Due_Amount__c * Payment_Plan__r.Project__r.EYI_TDS_Charge__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>