force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Tower__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>EYI_Tower__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>