force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Usage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Usage__c</fullName>
    <label>Usage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>