force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_Usage_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_Usage_Description__c</fullName>
    <label>Usage Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>