force-app/main/default/objects/EYI_Payment_Schedule__c/fields/EYI_WBS_Element__c.field-meta.xml
<CustomField>
    <fullName>EYI_WBS_Element__c</fullName>
    <description>Unique Identifier</description>
    <label>WBS Element</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>