force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/Activity_Number_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Number_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(EYI_SAP_Activity_Number__c),
    EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_SAP_Activity_Number__c</errorDisplayField>
    <errorMessage>Activity Number is required.</errorMessage>
</ValidationRule>