force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/CLP_Payment_Schedule_not_editableCannot.validationRule-meta.xml
<ValidationRule>
    <fullName>CLP_Payment_Schedule_not_editableCannot</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Payment_Plan__r.EYI_Plan_Type__c, &apos;Construction Linked Payment&apos;), $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>You could not edit a CLP plan</errorMessage>
</ValidationRule>