force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/CLP_Timebound_Schedule_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>CLP_Timebound_Schedule_not_editable</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Payment_Plan__r.EYI_Plan_Type__c, &apos;CLP + Time bound&apos;), $Profile.Name != &apos;System Administrator&apos;,  EYI_Billing_Date__c &lt;  TODAY() )</errorConditionFormula>
    <errorMessage>You could not edit future plans</errorMessage>
</ValidationRule>