force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/EYI_Billing_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>EYI_Billing_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( EYI_Billing_Date__c ),
EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_Billing_Date__c</errorDisplayField>
    <errorMessage>Billing Date is required.</errorMessage>
</ValidationRule>