force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/Milestone_Number_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_Number_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( EYI_Milestone_Number__c ),
EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_Milestone_Number__c</errorDisplayField>
    <errorMessage>Milestone Number is required.</errorMessage>
</ValidationRule>