force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/SAP_Plant_Code_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Plant_Code_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( EYI_SAP_Plant_Code__c ),
EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_SAP_Plant_Code__c</errorDisplayField>
    <errorMessage>Plant Code is required.</errorMessage>
</ValidationRule>