force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/SAP_Sales_Org_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Sales_Org_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( EYI_SAP_Sales_Org__c ),
EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_SAP_Sales_Org__c</errorDisplayField>
    <errorMessage>Sales Org is required.</errorMessage>
</ValidationRule>