force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/Usage_Description_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Usage_Description_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( EYI_Usage_Description__c ),
EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_Usage_Description__c</errorDisplayField>
    <errorMessage>Usage Description is required.</errorMessage>
</ValidationRule>