force-app/main/default/objects/EYI_Payment_Schedule__c/validationRules/Usage_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Usage_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( EYI_Usage__c ),
EYI_IsAutomationBypassed__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>EYI_Usage__c</errorDisplayField>
    <errorMessage>Usage is required.</errorMessage>
</ValidationRule>